<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleMuseoActivity"
    android:padding="@dimen/margin_general"
    >

    <TextView
        android:id="@+id/tvDetallesTituloMuseo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_txt_size_titulo_main"
        android:textAlignment="center"
        android:text="@string/nombre_del_museo"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:id="@+id/llDetallesUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetallesTituloMuseo"
        >
        <TextView
            android:id="@+id/tvDetallesDistritoMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text="@string/tv_detalles_distrito_fijo"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="3"
            />
        <TextView
            android:id="@+id/tvDetallesDistritoMuseoVacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text=""
            android:textColor="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDetallesDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDetallesUno"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvDetallesAreaMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text="@string/area_detalle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="3"
            />
        <TextView
            android:id="@+id/tvDetallesAreaMuseoVacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text=""
            android:textColor="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDetallesTres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDetallesDos"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvDetallesDireccionMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text="@string/direccion_detalle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="3"
            />
        <TextView
            android:id="@+id/tvDetallesDireccionMuseoVacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text=""
            android:textColor="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDetallesCuatro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llDetallesTres"
        >
        <TextView
            android:id="@+id/tvDetallesDescripcionMuseo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_txt_size_detalles_museo"
            android:text="@string/descripcion_detalle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDetallesCuatro"
        >
        <LinearLayout
            android:id="@+id/llDetallesCinco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvDetallesDescripcionMuseoVacio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tv_txt_size_detalles_museo"
                android:text=""
                android:textColor="@color/black"
                android:layout_weight="1"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>